<resources>
    <string name="app_name">Orin Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourite_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">Total Songs</string>
    <string name="back_button">Back Button</string>
    <string name="himanshu_orin_player">Himanshu Orin Player</string>
    <string name="song_name">Name of Song</string>
    <string name="previous_btn">Previous Button</string>
    <string name="play_pause_btn">PlayPause Button</string>
    <string name="next_btn">Next Button</string>
    <string name="start_time">00:00</string>
    <string name="end_time">11:11</string>
    <string name="repeat_btn">Repeat Button</string>
    <string name="equalizer_btn">Previous Button</string>
    <string name="timer_btn">Timer Button</string>
    <string name="share_btn">Share Button</string>
    <string name="add_btn">Add Button</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_icon">Navigation header icon</string>
    <string name="nav_message">Onboard to, \nNavigation drawer</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Album of Song</string>
    <string name="channel1">This is an important channel for showing songs</string>
    <string name="min15">15 Min</string>
    <string name="min30">30 Min</string>
    <string name="min60">1 Hour</string>
    <string name="search_view">Search View</string>
</resources>