<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".player_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/backBtn_PlayerA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back_button"
            android:background="@android:color/transparent"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/back_button"
            android:padding="5dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/himanshu_orin_player"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/favorite_border_icon"
            android:background="@android:color/transparent"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/favourite_btn"/>
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImagePA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/headphones_icon"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="#00DAAD"
        app:strokeWidth="5dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/previous_button"
            app:iconSize="30dp"
            android:layout_marginEnd="35dp"
            android:contentDescription="@string/previous_btn"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause_button"
            app:iconSize="40dp"
            android:contentDescription="@string/play_pause_btn"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="#F43C7A"
            app:iconTint="@color/white"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/forward_button"
            app:iconSize="30dp"
            android:layout_marginStart="35dp"
            android:contentDescription="@string/next_btn"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/seekBarStartPA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/start_time"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/seekBarEndPA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/end_time"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/repeatBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/repeat_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/EqualizerBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/graphic_eq_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/equalizer_btn"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/timerBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/timer_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/timer_btn"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/shareBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/share_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/share_btn"
            android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>